RB_SpotATS README 업데이트 및 시스템 설정 파일 정리

--- a/ATS_IsaacSim/Main/Spot_ATS_Proj/configs/default.yaml
+++ b/ATS_IsaacSim/Main/Spot_ATS_Proj/configs/default.yaml
@@ -59,7 +59,8 @@ ros:
     base_scan_3D: "Example_Rotary"
 
 policy:
-  path: "../ATS_Enviroment/spot_policy_ats_retrained.pt"
+  path: "../ATS_Enviroment/policies/spot_policy.pt"
+  # path: "../ATS_Enviroment/policies/policy_fix14.pt"
   device: "auto"
 
 controls:
