--- a/phyAI_ws/spot_ats.yml
+++ b/phyAI_ws/spot_ats.yml
@@ -11,18 +11,18 @@ windows:
           - cd ~/Projects/SpotATS_ws/phyAI_ws
           - source install/setup.bash
           - ros2 launch nav2_bringup navigation_launch.py use_sim_time:=true slam:=False params_file:=nav2_localization_params.yaml
-      - shell_command:
-          - cd ~/Projects/SpotATS_ws/phyAI_ws
-          - source install/setup.bash
-          - ros2 launch yolov8_bringup yolov8.launch.py
-      - shell_command:
-          - cd ~/Projects/SpotATS_ws/phyAI_ws
-          - source install/setup.bash
-          - ros2 run vision_context_builder vision_context_builder_node
-      - shell_command:
-          - cd ~/Projects/SpotATS_ws/phyAI_ws
-          - source install/setup.bash
-          - ros2 run ats_system1 system1_executor_node
+      #   - shell_command:
+      #       - cd ~/Projects/SpotATS_ws/phyAI_ws
+      #       - source install/setup.bash
+      #       - ros2 launch yolov8_bringup yolov8.launch.py
+      #   - shell_command:
+      #       - cd ~/Projects/SpotATS_ws/phyAI_ws
+      #       - source install/setup.bash
+      #       - ros2 run vision_context_builder vision_context_builder_node
+      #   - shell_command:
+      #       - cd ~/Projects/SpotATS_ws/phyAI_ws
+      #       - source install/setup.bash
+      #       - ros2 run ats_system1 system1_executor_node
       - shell_command:
           - cd ~/Projects/SpotATS_ws/phyAI_ws
           - source install/setup.bash
